新增“附加信息”中关于部署、IDE、书籍和视频以及可能改变等内容的翻译